// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelTitle should render when not open 1`] = `
<h3>
  <button
    aria-controls="panel-body-1"
    aria-expanded={false}
    aria-selected={false}
    id="panel-title-1"
    onClick={[MockFunction]}
    role="tab"
  >
    This is a title
  </button>
</h3>
`;

exports[`PanelTitle should render when open 1`] = `
<h3>
  <button
    aria-controls="panel-body-1"
    aria-expanded={true}
    aria-selected={true}
    id="panel-title-1"
    onClick={[MockFunction]}
    role="tab"
  >
    This is a title
  </button>
</h3>
`;
